--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
    <link rel="shortcut icon" href="/docter.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prescripto-doctor-booking-appointment-system</title>
+    <title>Prescripto - Doctor booking appointment System</title>
   </head>
   <body>
     <div id="root"></div>
